--- a/App/docker-compose.yml
+++ b/App/docker-compose.yml
@@ -18,6 +18,6 @@ services:
         SA_PASSWORD: "sUper45!pas5word"
         ACCEPT_EULA: "Y"
     healthcheck:
-      test: sqlcmd -S localhost,1184 -U SA -P 'sUper45!pas5word' -Q 'select 1'
+      test: sqlcmd -S localhost,1184 -U SA -P "sUper45!pas5word" -Q "select 1"
     ports:
       - "1184:1433"
