--- a/App/App/appsettings.json
+++ b/App/App/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1184;Database=DicomApp;User Id=sa;Password=sUper45!pas5word;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
