--- a/Project/App/appsettings.Development.json
+++ b/Project/App/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP\\MSSQL2016DB;Database=DicomApp;trusted_connection=yes;"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=DESKTOP\\MSSQL2016DB;Database=DicomApp;trusted_connection=yes;"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
