--- a/Project/docker-compose.override.yml
+++ b/Project/docker-compose.override.yml
@@ -4,11 +4,6 @@ services:
   app:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-      - ASPNETCORE_HTTPS_PORT=44333
+      - ASPNETCORE_URLS=http://+:80
     ports:
-      - "50999:80"
-      - "44333:443"
-    volumes:
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - "5001:80"
