--- a/Project/App/App.csproj
+++ b/Project/App/App.csproj
@@ -5,7 +5,7 @@
     <DockerTargetOS>Linux</DockerTargetOS>
     <UserSecretsId>78905486-7136-4bfb-aa3c-d51a67fce615</UserSecretsId>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,13 +30,8 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>x86</PlatformTarget>
-    <WarningLevel>0</WarningLevel>
-  </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <WarningLevel>0</WarningLevel>
   </PropertyGroup>
 
