--- a/Project/App/appsettings.json
+++ b/Project/App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=DicomApp;User Id=sa;Password=sUper45!pas5word;"
+    "DefaultConnection": "Server=db;Database=DicomApp;User Id=SA;Password=sUper45!pas5word;"
   },
   "Logging": {
     "LogLevel": {
