--- a/Project/App/Dockerfile
+++ b/Project/App/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /src
 COPY App/App.csproj App/
 RUN dotnet restore App/App.csproj
 COPY . .
+RUN ls -la .
 WORKDIR /src/App
 RUN dotnet build App.csproj -c Release -o /app
 
@@ -16,4 +17,5 @@ RUN dotnet publish App.csproj -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
+RUN ls -a 
 ENTRYPOINT ["dotnet", "App.dll"]
