--- a/Project/App/Dockerfile
+++ b/Project/App/Dockerfile
@@ -1,4 +1,5 @@
 FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
+RUN apt-get update && apt-get install -y --no-install-recommends libgdiplus libc6-dev && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 EXPOSE 80
 
