--- a/viewer/package.json
+++ b/viewer/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "file-base64": "^1.0.0",
     "filepond": "^3.3.2",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-button-loader": "^1.0.12",
     "react-dom": "^16.6.3",
+    "react-file-base64": "^1.0.3",
     "react-filepond": "^5.0.0",
     "react-images-upload": "^1.2.3",
     "react-router-bootstrap": "^0.24.4",
