--- a/Project/docker-compose.yml
+++ b/Project/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     depends_on:
       - db
   web:
+    container_name: web
     build: segmentation
     ports: 
       - "5000:5000"
-
   db:
     container_name: mssql
     image: "mcr.microsoft.com/mssql/server:2017-latest"
@@ -25,7 +25,6 @@ services:
     restart: "always"
     ports:
       - "1184:1433"
- 
   volume:
     container_name: volume
     image: ${DOCKER_REGISTRY}volume
