--- a/Application.Tests/Application.Tests.csproj
+++ b/Application.Tests/Application.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.5.1" />
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="FluentAssertions" Version="5.5.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
@@ -19,12 +20,6 @@
     <ProjectReference Include="..\Project\Application.Data\Application.Data.csproj" />
     <ProjectReference Include="..\Project\Application.Services\Application.Services.csproj" />
     <ProjectReference Include="..\Project\Application\Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="AutoMapper">
-      <HintPath>C:\Users\Administrator\.nuget\packages\automapper\8.0.0\lib\netstandard2.0\AutoMapper.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
