--- a/viewer/package.json
+++ b/viewer/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-button-loader": "^1.0.12",
+    "react-bootstrap-toggle": "^2.3.1",
     "react-dom": "^16.6.3",
     "react-file-base64": "^1.0.3",
     "react-filepond": "^5.0.0",
